# BRANDPILOT

./: .env.example  .gitignore  .pylintrc  BRANDSCALE_ACTION_PLAN.md  BRANDSCALE_AUDIT_PROMPT_EDGECORE_METHOD.md  BRANDSCALE_AUDIT_PROMPT_FINAL.md  BRANDSCALE_AUDIT_PROMPT_V2.md  BRANDSCALE_COPILOT_EXECUTION_PLAN.md  BRANDSCALE_MASTER_AUDIT.md  BRANDSCALE_MULTIVERSAL_EXECUTOR_PROMPT.md  COPILOT_PROMPT_CAMPAIGN_AGENT.md  Dockerfile.backend  Dockerfile.frontend  Makefile  PLAN_AMELIORATION_BRANDPILOT.md  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_scoring_weights_prompt_templates_campaign_budget.py  0003_campaign_agent_social_posts_validations_metrics.py  0004_v2_social_tables.py  0005_project_brand_url_tone.py
backend/: exceptions.py  main.py
backend/middleware/: auth.py  error_handler.py  logging_middleware.py
configs/: ai_config.py  alerting.py  logging_config.py  settings.py
database/: connection.py  crypto.py  models_orm.py  schema.sql
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/components/: AnalyticsCharts.tsx  AuthGuard.tsx  AutomationMonitor.tsx  CampaignManager.tsx  ContentGeneratorUI.tsx  LeadIntelligencePanel.tsx  ServiceStatusBar.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: index.ts  useAnalytics.ts  useAudienceInsights.ts  useAuth.ts  useBrandAnalysis.ts  useCampaignAgent.ts  useCampaignValidation.ts  useCampaigns.ts  useContentFormatter.ts  useContentGeneration.ts  useInfluencerAnalysis.ts  useLeads.ts  useProjects.ts  useSocialAccounts.ts  useSocialAnalytics.ts  useSocialCampaign.ts
frontend/utils/: api.ts  auth.ts  formatters.ts  timezone.ts
microservices/: workflow.py
microservices/bs_ai_image/: api.py  main.py  s3_uploader.py  service.py  worker.py
microservices/bs_ai_text/: api.py  main.py  platform_adapter.py  service.py  worker.py
microservices/bs_ai_video/: api.py  main.py  service.py  worker.py
microservices/bs_audience_insights/: __init__.py  api.py  best_time_engine.py  engagement_calc.py  platform_analyzers.py  pricing_calc.py  service.py  worker.py
microservices/bs_brand_analyzer/: __init__.py  api.py  competitor.py  scraper.py  service.py  tone_analyzer.py  visual_analyzer.py  worker.py
microservices/bs_content_formatter/: __init__.py  adaptive_writer.py  api.py  grid_maker.py  hashtag_engine.py  image_resizer.py  service.py  text_formatter.py  worker.py
microservices/bs_email/: api.py  double_optin.py  main.py  rgpd.py  service.py  templates.py  tracker.py  worker.py
microservices/bs_scoring/: api.py  main.py  rules.py  service.py  worker.py
microservices/bs_social_publisher/: __init__.py  analytics_collector.py  api.py  instagram_publisher.py  linkedin_publisher.py  oauth_manager.py  service.py  tiktok_publisher.py  twitter_publisher.py  worker.py  youtube_publisher.py
microservices/campaign_agent/: __init__.py  agent.py  api.py  campaign_builder.py  context_builder.py  execution_planner.py  intent_parser.py  main.py  worker.py
scripts/: _test_phase_finale.py  check_health.py  deploy_vertical.sh  generate_rsa_keys.py  monitor_services.py  run_scheduler.sh  start_backend.sh  start_workers.sh  validate_vertical.py
tests/: conftest.py
tests/backend/: test_campaigns_agent_routes.py  test_campaigns_crud_success.py  test_content_generate_success.py  test_health_endpoint_returns_status.py  test_leads_crud_success.py  test_leads_import_csv_success.py  test_projects_crud_success.py  test_workflows_run_success.py
tests/microservices/: test_bs_ai_text_fallback_on_api_failure.py  test_bs_ai_text_generate_email_success.py  test_bs_ai_text_generate_post_success.py  test_bs_email_send_success.py  test_bs_email_unsubscribe_rgpd_compliant.py  test_campaign_agent.py  (+4 more)
(+108 files in other folders)
