# ============================================================
# PROJECT      : BRANDSCALE — AI Brand Scaling Tool
# FILE         : pyproject.toml
# DESCRIPTION  : Python project configuration (Black, Ruff, Pytest)
# AUTHOR       : BRANDSCALE Dev Team
# WORKFLOW     : VSCode + Claude + Copilot Pro + File Engineering
# PYTHON       : 3.11.9
# LAST UPDATED : 2026-03-08
# ============================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brandscale"
version = "1.0.0"
description = "BRANDSCALE — AI-powered marketing automation platform"
authors = [
    { name = "BRANDSCALE Dev Team", email = "dev@brandscale.io" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "marketing", "automation", "brandscale"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "alembic>=1.13.1",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "redis>=5.0.2",
    "celery[redis]>=5.3.6",
    "loguru>=0.7.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.14.0",
    "cryptography>=42.0.4",
    "aiosmtplib>=3.0.0",
    "boto3>=1.34.60",
    "flower>=2.0.1",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.2.0",
    "ruff>=0.3.2",
    "mypy>=1.9.0",
    "pylint>=3.1.0",
    "types-passlib>=1.7.7",
    "types-redis>=4.6.0",
    "httpx>=0.27.0",
]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | alembic
  | node_modules
)/
'''

# ---------------------------------------------------------------------------
# Ruff — linter (replaces Flake8 + isort)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["brandscale", "backend", "microservices", "configs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["brandscale", "backend", "microservices", "configs"]
force-sort-within-sections = true

# ---------------------------------------------------------------------------
# Pytest — test configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "security: marks tests that verify critical security invariants (HITL gate, ownership, status guards)",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=backend",
    "--cov=microservices",
    "--cov=configs",
    "--cov=database",
    "--cov-report=html:BRANDSCALE_coverage_report.html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-v",
    "--tb=short",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
